# padelgraph-ai

./: .decision-log.md  .gitignore  ARCHITECTURE.md  BUSINESS_PANEL.md  EPICS.md  HANDOFF.md  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
STORIES/epic-1-foundation/: story-001-repo-bootstrap.md  story-002-single-cam-detection.md  story-003-multi-cam-sync.md  story-004-court-homography.md  story-005-triangulation-3d.md
scripts/: _stress_worker.py  scenario_seed.py  stress_test.sh  validate_runs.py
src/padelgraph_ai/: __init__.py  schemas.py
src/padelgraph_ai/court/: __init__.py  homography.py
src/padelgraph_ai/detection/: __init__.py  yolox_runner.py
src/padelgraph_ai/fusion/: __init__.py  calibrate.py  kornia_triangulate.py
src/padelgraph_ai/pipeline/: __init__.py  infer.py
src/padelgraph_ai/sync/: __init__.py  timestamp_sync.py
src/padelgraph_ai_ui/: __init__.py
tests/: test_detection.py  test_homography.py  test_pipeline.py  test_scenarios.py  test_smoke.py  test_sync.py  test_triangulate.py
