[project]
name = "padelgraph-ai"
version = "0.1.0"
description = "Open-source AI analytics pipeline for padel — ball + player + court detection, multi-camera 3D fusion, shot classification. Apache 2.0."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Alan Nadal Piantini", email = "nadalpiantini@gmail.com" },
]
keywords = [
    "padel",
    "computer-vision",
    "sports-analytics",
    "ball-tracking",
    "pose-estimation",
    "multi-camera",
    "triangulation",
    "shot-classification",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "opencv-python>=4.10",
    "kornia>=0.7.4",
    "supervision>=0.25",
    "pydantic>=2.7",
    "click>=8.1",
    "numpy>=1.26,<2.3",
    "torch>=2.4",
    "torchvision>=0.19",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
pose = ["mediapipe>=0.10"]
ui = ["streamlit>=1.40"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "ipykernel>=6.29",
]

[project.urls]
Homepage = "https://github.com/nadalpiantini/padelgraph-ai"
Repository = "https://github.com/nadalpiantini/padelgraph-ai"
Issues = "https://github.com/nadalpiantini/padelgraph-ai/issues"

[project.scripts]
padelgraph-ai-infer = "padelgraph_ai.pipeline.infer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/padelgraph_ai", "src/padelgraph_ai_ui"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
    "integration: marks integration tests requiring real video files",
]
